--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </head>
   <body>
     <ul class="navbar">
-      <li style="float: left; margin-left: -10px;" class="forecast"><a class="repo-link" href="#">☔ WeatherCraft</li>
+      <li style="float: left; margin-left: -10px;" class="forecast"><a class="repo-link" href="#">☔ WeatherCraft</li></a>
       <li><input spellcheck="false" class="search-city" id="searchCity" type="text" autocomplete="off" placeholder="🔍︎ Search City"></li>
     </ul>
 
