--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Weather App Using OpenWeatherMap API</title>
+    <title>WeatherCraft | By Sujal Bisani</title>
 
     <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
 
@@ -38,14 +38,14 @@
     <style>
       body
       {
-        /* background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)) , url('media/day1.jpg'); */
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)) , url('media/day1.jpg');
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         
         /* Added background-repeat and set it to no-repeat to help prevent the images from duplicating. I added !important to 
          * background-repeat and background-size in order to place importance on the background images not repeating and
-         * to cover the entire webpage. Phillip Andrews
+         * to cover the entire webpage.
          */
         background-repeat: no-repeat !important;
         background-size: cover !important;
@@ -61,11 +61,11 @@
 				}
 			}
     </style>
-    <title>Weather Forecast | By Sujal Bisani</title>
+    <title>WeatherCraft | By Sujal Bisani</title>
   </head>
   <body>
     <ul class="navbar">
-      <li style="float: left; margin-left: -10px;" class="forecast"><a class="repo-link" href="#">☔ WeatherCraft</li>
+      <li style="float: left; margin-left: -10px;" class="forecast"><a class="repo-link" href="#">☔ WeatherCraft</li></a>
       <li><input spellcheck="false" class="search-city" id="searchCity" type="text" autocomplete="off" placeholder="🔍︎ Search City"></li>
     </ul>
 
