--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 				height: 100vh;
       }
+      /* when the screen width is 600 pixels or less (typically smaller screens like mobile devices), this media query adjusts the height of the <body> element to 100% of the viewport height. This can be useful to ensure that the content takes up the full screen height on smaller devices, preventing unnecessary scrolling and improving the overall user experience. */
+
 			@media (max-width: 600px)
 			{
 				body
@@ -65,7 +67,7 @@
   </head>
   <body>
     <ul class="navbar">
-      <li style="float: left; margin-left: -10px;" class="forecast"><a class="repo-link" href="#">☔ WeatherCraft</li></a>
+      <li style="float: left; margin-left: -10px;" class="forecast"><a class="repo-link" href="https://github.com/sb200212/WeatherCraft">☔ WeatherCraft</li></a>
       <li><input spellcheck="false" class="search-city" id="searchCity" type="text" autocomplete="off" placeholder="🔍︎ Search City"></li>
     </ul>
 
@@ -84,22 +86,22 @@
 
     <div class="additionals-first-row">
       <span class="air-quality-additional">
-        <span class="air-quality-additional-label">Air Quality Index </span>
-        <span class="air-quality-index-additional-value">Moderate</span>
+        <span class="air-quality-additional-label">Air Quality Index: </span>
+        <span class="air-quality-index-additional-value">-</span>
       </span>
 
       <span class="real-feel-additional">
-        <span class="real-feel-additional-label">Real Feel </span>
+        <span class="real-feel-additional-label">Real Feel: </span>
         <span class="real-feel-additional-value" id="realFeelAdditionalValue">-</span>
       </span>
 
       <span class="humidity-additional">
-        <span class="humidity-additional-label">Humidity </span>
+        <span class="humidity-additional-label">Humidity: </span>
         <span class="humidity-additional-value" id="humidityAdditionalValue">-</span>     
       </span>
 
       <span class="max-temperature-additional">
-        <span class="max-temperature-additional-label">Highest Temperature </span>
+        <span class="max-temperature-additional-label">Highest Temperature: </span>
         <span class="max-temperature-additional-value" id="maxTemperatureAdditionalValue">-</span>
       </span>
 
@@ -141,7 +143,7 @@
       </span>
     </div>
 
-    <div class="search-city author-text">
+    <div class="search-city author-text" style="position: fixed; bottom: 0; width: 100%;">
       <p style="text-align: center; padding: 10px;">
         Made with <em>⛏️</em> by <b>Sujal Bisani</b>
       </p>
